# advent-of-code

./: .gitignore  LICENSE  README.md
2020/: Manifest.toml  Project.toml  aoc  day01.jl  day02.jl  day03.jl  day04.jl  day05.jl  day06.jl  day07.jl  day08.jl  day09.jl  day10.jl  day11.jl  day12.jl  day13.jl  day14.jl  day15.jl  day16.jl  day17.jl  day18.jl  day19.jl  day20.jl  day21.jl  day21b.jl  day22.jl
2022/: .gitignore  readme.md
2022/day01/: day01.R  day01.jl
2022/day02/: day02.jl
2022/day03/: day03.jl
2022/day04/: day04.jl
2022/day05/: day05.jl
2022/day06/: day06.jl
2022/day07/: day07.jl
2022/day08/: Manifest.toml  day08.jl
2022/day09/: day09.jl
2022/day10/: day10.jl
2022/day11/: day11.jl
2022/day12/: Manifest.toml  Project.toml  day12.jl
2022/day13/: day13.jl
2022/day14/: day14.jl
2022/day15/: Manifest.toml  day15.jl
2022/day16/: Project.toml  day16.jl
2022/day17/: day17.jl  something.jl  tetris.jl
2022/day18/: Manifest.toml  Project.toml  day18.jl
2022/day19/: Project.toml  day19.jl
2022/day20/: Project.toml  day20.jl
2022/day21/: Project.toml  day21.jl
2022/day22/: Manifest.toml  day22.jl
2022/day23/: Manifest.toml  Project.toml  day23.jl
2022/day24/: Manifest.toml  day24.jl
2022/day25/: day25.jl
2023/: README.md
2023/day19/: d.py  (+4 more)
2024/: README.md
2025/: README.md
leaderboard/: Manifest.toml  Project.toml  README.md  parse_self_stats.jl
leaderboard/personal/rs/: Cargo.toml  README.md
leaderboard/personal/rs/src/: display.rs  duration.rs  main.rs  parse.rs  request.rs  stats.rs
templates/: dayxx.jl
(+161 files in other folders)
