[package]
name = "aoc-personal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["cargo", "wrap_help", "derive"] }
dotenv = "0.15.0"
html5ever = "0.26.0"
markup5ever_rcdom = "0.2.0"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
