[package]
name = "aoc-personal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["cargo", "wrap_help", "derive"] }
dotenv = "0.15.0"
num-format = "0.4.4"
prettytable = "0.10.0"
reqwest = "0.11.22"
scraper = "0.18.1"
tokio = { version = "1.34.0", features = ["full"] }
